ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: jenkins  
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: myapp.example.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-service-name 
            port:
              number: 80
